.manifests/staging/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holenav-server-svc
  namespace: holenav-staging
spec:
  type: ClusterIP
  selector:
    app: holenav-server
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
